@@ -4,4 +4,5 @@
   24-Nov-2020  - V0.13 Add ChEMBLTargetProvider() and tests
   28-Nov-2020  - V0.14 Add CARDTargetProvider() and tests
   30-Nov-2020  - V0.15 Add SAbDabTargetProvider() and tests
+   1-Dec-2020  - V0.16 Connect to UniProtIdMappingProvider() and add tagged fasta comment output.
 
